# genetic

./: .env  .gitignore  README.md  conftest.py  pyproject.toml  setup.py
genetic/: adapters.py  convert.py  dbscan.py  individual.py  main.py  operators.py  schemas.py  selection.py  settings.py  state.py  utils.py
tests/: test_adapters.py  test_convert.py  test_individual.py  test_operators.py  test_state.py
